# storage/api-docs/api-docs.json
@@ -210,6 +210,89 @@
                     }
                 ]
             }
+        },
+        "/api/events/{event}/reviews": {
+            "get": {
+                "tags": [
+                    "Reviews"
+                ],
+                "summary": "Dapatkan semua ulasan untuk event tertentu",
+                "operationId": "94d5427dc3a2a94dbb2ad60e1d101d88",
+                "parameters": [
+                    {
+                        "name": "event",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Berhasil mendapatkan ulasan"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Reviews"
+                ],
+                "summary": "Tambahkan ulasan ke event",
+                "operationId": "2b4652ff9813984267b83715620e4e1e",
+                "parameters": [
+                    {
+                        "name": "event",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "rating"
+                                ],
+                                "properties": {
+                                    "rating": {
+                                        "type": "integer",
+                                        "example": 5
+                                    },
+                                    "comment": {
+                                        "type": "string",
+                                        "example": "Bagus banget!"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Ulasan berhasil ditambahkan"
+                    },
+                    "400": {
+                        "description": "Event belum selesai"
+                    },
+                    "401": {
+                        "description": "Tidak terautentikasi"
+                    },
+                    "403": {
+                        "description": "Tidak memiliki akses untuk mengulas"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -236,6 +319,10 @@
         {
             "name": "Registrations",
             "description": "Registrations"
+        },
+        {
+            "name": "Reviews",
+            "description": "Reviews"
         }
     ]
 }
